--- a/README
+++ b/README
@@ -1,5 +1,5 @@
 OVERVIEW
-====================================================================================================================================
+=================================================================================================================================
 
 Stingray is a Fortran tool to produce mock observing cones from semi-analytic models (SAMs) of galaxy formation.
 
@@ -35,7 +35,7 @@ Developed by Danail Obreschkow (danail.obreschkow@icrar.org)
 
 
 GETTING STARTED
-====================================================================================================================================
+=================================================================================================================================
 
 1) Installations:
    a) make sure gfortran is installed (code tested for GNU Fortran 9.3.0)
@@ -77,14 +77,14 @@ To produce your own, custom-made mock sky,
 
 9) Edit the parameter file parameter.txt as required. (see explanations in default parameter file)
 
-10) Edit the selection function "module_user_selection_..." as required. (see explanations in the comments of the default module)
+10) Edit the selection function "module_user_selection_..." as required. (see explanations in the default module)
    
 11) Produce mock observing cone
     > ./stingray [-parameterfile .../parameter.txt] [-parameterset ...]
    
 
 QUICK START ON ICRAR-HYADES
-====================================================================================================================================
+=================================================================================================================================
 
 # To install and compile stingray in your home directory, copy the following lines into the hyades terminal:
 cd ~
@@ -101,7 +101,7 @@ make system=hyades # compile code
 
 
 ARGUMENTS
-====================================================================================================================================
+=================================================================================================================================
 
 Generally, Stingray is called as
 > ./stingray [-option argument] [-option argument] ...
@@ -111,10 +111,10 @@ Optional arguments:
 -parameterfile (default parameters.txt): path+filename of parameter-file
 
 -parameterset: if this option is specified, e.g. "-parameterset abc", the parameters listed in this parameterset, e.g. between
- the lines "parameterset abc" and "end" overwrite the default parameters specified outside the parameterset. The user can mark at
- most one parameterset in the parameterfile as the default parameterset using an asterix: "parameterset* abc". This parameterset
- is taken as the default, if the option "-parameterset" is not provided. If no parameterset is marked as default and if no
- parameterset is selected via "-parameterset", all parameters in parametersets are ignored.
+ the lines "parameterset abc" and "end" overwrite the default parameters specified outside the parameterset. The user can mark
+ at most one parameterset in the parameterfile as the default parameterset using an asterix: "parameterset* abc". This
+ parameterset is taken as the default, if the option "-parameterset" is not provided. If no parameterset is marked as default
+ and if no parameterset is selected via "-parameterset", all parameters in parametersets are ignored.
 
 -logfile (default none) optional filename of an ascii-file for the screen output
 
