--- a/README
+++ b/README
@@ -31,6 +31,8 @@ v0.28 01/05/2020: New module "module_selection_tools" to simplify "module_user_s
 v0.29 04/05/2020: Parameter file with logical types, improved automatic parameter evaluation via set_auto_parameter routine
 v0.30 10/05/2020: New projection methods (see randomisation parameter)
 v0.31 11/05/2020: Various OOP improvements; packed relevant snapshot/tile/shell data into type_base for interfacing with user
+v0.32 18/05/2020: Updated makefile; optional developer parameters added
+v0.33 20/05/2020: Minor bug fix in shared modules
 
 Developed by Danail Obreschkow (danail.obreschkow@icrar.org)
 
@@ -71,8 +73,6 @@ GETTING STARTED
    > ./stingray
    NB: This command assumes the default parameter file "parameters.txt" to be in the current directory.
        Otherwise you must specify the path+filename of the parameter file using the option -parameterfile ...
-   NB: The default parameter file produces a mock sky using the SAM galaxies in the "data" subdirectory of stingray.
-       This sky should contain 500 galaxies in 485 groups.
 
 To produce your own, custom-made mock sky,
 
@@ -97,7 +97,7 @@ make system=hyades # compile code
 ./stingray version # check version
 
 # To run a quick test execute the following line (still from within the stingray directory)
-# The sky should contain 500 galaxies in 485 groups. The data is written in the directory "example"
+# The sky should contain 500 galaxies in 486 groups. The data is written in the directory "example"
 ./stingray
 
 
